[gd_scene load_steps=4 format=3 uid="uid://dv83jmfd72eka"]

[ext_resource type="PackedScene" uid="uid://mm7endc3mrl0" path="res://scenes/screens/base_screen.tscn" id="1_7nsfq"]
[ext_resource type="Script" uid="uid://u3nnvbd6vv13" path="res://scripts/screens/inicial_screen.gd" id="2_6yyev"]
[ext_resource type="AudioStream" uid="uid://cimih030x2md7" path="res://assets/music/intro.mp3" id="3_qu5om"]

[node name="InicialScreen" instance=ExtResource("1_7nsfq")]
script = ExtResource("2_6yyev")

[node name="MarginContainer" parent="." index="1"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -175.0
offset_right = 224.0
offset_bottom = 269.0
grow_vertical = 2

[node name="VBoxContainer" parent="MarginContainer/HBoxContainer" index="0"]
theme_override_constants/separation = 25

[node name="Title" parent="MarginContainer/HBoxContainer/VBoxContainer" index="0"]
theme_override_font_sizes/font_size = 80
text = "Catout"

[node name="HSeparator2" parent="MarginContainer/HBoxContainer/VBoxContainer" index="1"]
theme_override_constants/separation = 200

[node name="Button1" parent="MarginContainer/HBoxContainer/VBoxContainer" index="2"]
theme_override_font_sizes/font_size = 32
text = "Jogar"

[node name="Button2" parent="MarginContainer/HBoxContainer/VBoxContainer" index="3"]
theme_override_font_sizes/font_size = 32

[node name="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer" index="4"]
theme_override_constants/separation = 78

[node name="Music" type="AudioStreamPlayer2D" parent="Audios" index="2"]
stream = ExtResource("3_qu5om")
autoplay = true
bus = &"Music"
parameters/looping = true

[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/Button1" to="." method="_on_button_1_mouse_entered"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
